k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-bird-of-hermes-srv
  namespace: hermes-raft-ai
spec:
  selector:
    app: bird-of-hermes
    role: web
  ports:
    - name: http
      port: 8000
      targetPort: flask-port
  type: LoadBalancer
